# MemeETF

./: .env.example  .gitignore  .vercelignore  Anchor.toml  Cargo.toml  README.md  build-and-deploy.ps1  check-deployment.ps1  deploy-linux.sh  deploy.ps1  env.example.txt  fix-env.ps1  index.html  middleware.ts  move-to-short-path.ps1  next.config.mjs  note.txt  package-lock.json  package.json  test-production-apis.ps1  update-vercel-env.sh  vercel.json  vite.config.ts
.claude/: settings.local.json
app/: layout.tsx
app/[[...slug]]/: route.ts
components/: NetworkToggle.tsx
components/providers/: WalletContextProvider.tsx
components/ui/: Card.tsx  Input.tsx  Navbar.tsx  button.tsx  spinner-1.tsx
components/wallet/: Wallet.tsx
lib/anchor/: client.ts  idl.ts
lib/contexts/: NetworkContext.tsx
lib/database/: connection.ts  queries.ts  transactions.ts
lib/solana/: jupiterSwap.ts  program.ts  tokenBalances.ts  wallet.ts
lib/utils/: format.ts  tokenData.ts
migrations/: 001_initial_schema.sql  002_add_pnl_column.sql  002_add_token_swap_support.sql  002_add_twitter_link.sql  003_custodial_wallet_system.sql  004_fix_critical_schema_issues.sql  005_add_network_support.sql  006_add_etf_index.sql
programs/mtf-etf/: Cargo.toml
programs/mtf-etf/src/: lib.rs
public/vite-build/: index.html
scripts/: add-protocol-columns.cjs  check-schema.cjs  migrate.cjs  set-vercel-env.sh  test-db.cjs
src/: App.tsx  main.tsx
src/components/: Admin.tsx  Dashboard.tsx  ETFDetail.tsx  ErrorBoundary.tsx  (+10 more)
tests/: mainnet.ts  mtf-etf.ts  tsconfig.json
types/: index.ts
(+126 files in other folders)
