[package]
name = "mtf-etf"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mtf_etf"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
# Pin dependencies to versions compatible with Solana's Rust toolchain (1.75.0)
borsh-derive = "=1.5.7"
indexmap = "=2.0.2"

